--- a/R_code/Arthur_Harnisch_Homework_6.Rmd
+++ b/R_code/Arthur_Harnisch_Homework_6.Rmd
@@ -1,57 +1,23 @@
 ---
-title: 'Homework #6'
+title: 'Arthur Harnisch Homework #6'
 author: "Arthur Harnisch"
 date: "September 27, 2017"
-output: html_document
+output: word_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
-#inster r code into rchunk 
+We will download and plot several months of tide height data for a given NOAA tide station. To accomplish this, we will use a function tideDownload designed to access the NOAA tide data website and request 1 month of data at a time. The website limits the user to a maximum of 1 month per request.
+
+Examples of how to create data requests are given on the NOAA ERDDAP website: https://opendap.co-ops.nos.noaa.gov/erddap/index.html
+
+First we will request data for Monterey CA (station 9413450) for the month of January 2017.
+
 ```{r tideFunction}
-# coops_tide_ht_retrieval.R
-# Author: Luke Miller Feb 2011
-# Updated 2017-09-26 to handle newer ERDDAP format
-
-#note function resres = NOAAfunction(station = 9413450,startDate = 20120101, endDate - 20120128)
-################################################################################
-# Run this script as-is. It will prompt you to enter the appropriate
-# station and date values when needed. You can only request less than 1 month of 
-# data at a time, so if you get an error returned, try asking for slightly less
-# data.
-
-# This script will download a set of verified tide height data from a NOAA 
-# CO-OPS DODS/OPeNDAP server and parse it into a data frame to be saved to disk 
-#
-# Station list: http://opendap.co-ops.nos.noaa.gov/stations/index.jsp
-# Scroll through that list to find your station ID. 
-
-# OPeNDAP server gateway: https://opendap.co-ops.nos.noaa.gov/erddap/index.html
-# The gateway has links to several other data types available including 
-# water temperature, air temperature, wind etc. 
-# See http://docs.opendap.org/index.php/UserGuideOPeNDAPMessages for info on
-# structuring OPeNDAP queries.
-#
-# Six-minute water level data can only be retrieved 1 month at a time. Other
-# fields such as water temperature could return up to 1 year at a time. This 
-# script only deals with 6-minute tide height data, but could serve as a guide 
-# for accessing other data types from NOAA CO-OPS. 
-# The tide height is reported in meters and time in UTC (Greenwich).
-
-###############################################################################
-
 library(RCurl)
-# you can also use requires function or etc. 
 
-# noquote(print("Enter NOAA tide station number (i.e. Monterey = 9413450): "))
-# station = scan("",what = character(),nlines = 1)
-# noquote(print("Enter start date (format: 20080123 = Jan 23, 2008): "))
-# startdate = scan("",what = character(),nlines = 1) #get one line of values
-# noquote(print("Enter end date (format: 20081231 = Dec 31, 2008): "))
-# enddate = scan("",what = character(),nlines = 1)
-#do not need to ask user to enter
 
 #OPeNDAP query for 6-minute verified water level looks like this (on 1 line):
 # https://opendap.co-ops.nos.noaa.gov/erddap/tabledap/
@@ -61,11 +27,10 @@ library(RCurl)
 # DATUM=%22MLLW%22&
 # BEGIN_DATE=%2220080123%22&
 # END_DATE=%2220080130%22
-#####################################################
-######## DON'T CHANGE ANYTHING BELOW THIS LINE ####################
-#The parts of the url to be assembled:
 
-NOAAfunction <- function(station,startDate, endDate){
+
+
+
 url1 = "https://opendap.co-ops.nos.noaa.gov/erddap/tabledap/"
 url2 = "IOOS_SixMin_Verified_Water_Level.asc?"
 url3 = "STATION_ID%2C" #return stationId
@@ -92,7 +57,7 @@ url17 = "%22"
 
 #Assemble the URL
 urltotal = paste(url1,url2,url3,url4,url5,url6,url7,url8,url9,url10,url11,
-		station,url12,url13,url14,startDate,url15,url16,endDate,url17,sep ="")
+		station,url12,url13,url14,startdate,url15,url16,enddate,url17,sep ="")
 
 #Download the data
 cat("Contacting server...\n"); flush.console()
@@ -146,14 +111,11 @@ if (length(grep('^Error',all.lines))>0) { #check for error in retrieval
 #			xlab = "Date",ylab = "Tide Height, meters")
 	
 	#Save data automatically to a .csv file. 
-	
-	
-	# you can comment out this section goal is to generate new plots of data
-#	filename = paste("Station_",station,"_",startdate,"-",enddate,
-	#		".csv",sep = "") #make file name
-#	write.csv(df,filename,row.names = FALSE, quote = FALSE) #write file to disk note this should be deleted. 
-#	cat("Saved to ",getwd(),"/",filename,"\n",sep = "")
-#	flush.console()
+	filename = paste("Station_",station,"_",startdate,"-",enddate,
+			".csv",sep = "") #make file name
+	write.csv(df,filename,row.names = FALSE, quote = FALSE) #write file to disk
+	cat("Saved to ",getwd(),"/",filename,"\n",sep = "")
+	flush.console()
 	
 	#Alternate file save method lets user specify file name at run time
 	#Uncomment this if you wish to use it instead of the automated file 
@@ -161,29 +123,14 @@ if (length(grep('^Error',all.lines))>0) { #check for error in retrieval
 #	write.csv(df,file.choose(),row.names = FALSE, quote = FALSE)
 	
 	#cleanup
-#	rm(dat,con,all.lines,startdate,enddate,filename,headerlines, headers)
+	rm(dat,con,all.lines,startdate,enddate,filename,headerlines, headers)
 	
 } #end of if-else statement
-invisible(df) #all of df will be spit out 
-} #closing bracket for the funciton defination NOAA function 
 
 ```
 
-```{r plot function}
-#create a plotting function for the tide data. 
-plotTides <- function(df){
-  plot(x=df$TimeUTC, y= df$TideHT, type='l', xlab = 'Date', ylab = 'TideHt, m', col = 'blue')
-}
+
+```{r}
+plot(x= res$TimeTC, y=res$TideXT, type = '1') #1 would be line graph B would be Box plot. 
 ```
 
-
-cash directories when using the knit function use rstudio to form word document. inorder to avoid this. store the results for each of the chunks, r will change results. avoid continuous set of data
-
-```{r grabJan, cache=TRUE, message = FALSE, warning = FALSE}
-jan = NOAAfunction(9413450, 20160101, 20160201)
-```
-output messages can be displayed,  
-
-
-
-changing the global cache conflict, deleting the cache folder can eliminate conflicts, sometimes this can occur because of the when chunk for cashe import, leave the plot diffingation unchunked. when kniting, the changes will propogate in each plot. add a date range and can extract add gridlines, how low or how high the grid lines can be. 
